# module_path_extractor

./: Cargo.toml  README.md
src/: lib.rs
